@@ -1,5 +1,10 @@
 2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* drivers/dd/videoprt/videoprt.c: Add @implemented and @unimplemented
+	to APIs.
+
+2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* lib/version/misc/stubs.c: Add @implemented and @unimplemented to APIs.
 
 2003-07-10  Casper S. Hornstrup  <chorns@users.sourceforge.net>
